feat: add security requirements
